Revert "Recuperar contraseña + foto de perfil agregara en navbar"

--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -12,9 +12,9 @@
           </ion-item>
         </ion-buttons>
        <ion-searchbar  class="listaUsuarios" autocomplete="on" (click)="dontShow=false" placeholder="Buscar usuarios registrados" slot="primary" showCancelButton="never" cancelButtonText="Custom Cancel"></ion-searchbar>
-        <ion-buttons slot="end" routerLink="/perfil/{{currentUser.idPersona}}">
-          <ion-avatar style="display: flex; justify-content: center; align-items: center; ">
-            <img style="height: 40px; width: 40px; margin:0px" [src]="userImage" class="iconosPublicacion">
+        <ion-buttons slot="end" routerLink="/perfil/{{datoUsuario.userId}}">
+          <ion-avatar>
+            <img src="../../../assets/icon/1024px-User-avatar.svg.png" class="iconosPublicacion">
           </ion-avatar>
         </ion-buttons>
         <ion-buttons slot="end" [routerLink]="['../interes']">
