--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -51,9 +51,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <div [routerLink]="['../recuperar-password']">
-                      <ion-label id="hover">¿Olvidaste tu contraseña?</ion-label>
-                    </div>
+                    <ion-label>¿Olvidaste tu contraseña?</ion-label>
                   </ion-row>
                 </ion-list>
               </ion-card-content>
