--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -3,12 +3,12 @@
     <ion-toolbar style="max-height: 60px;">
       <ion-row style="max-height: 60px;">
 
-        <ion-col size-xs="1">
+        <ion-col size-xs="1" class="ion-no-padding">
           <ion-row style="display: flex;" class="ion-justify-content-around">
             <ion-buttons >
               <ion-back-button  class="pointer" text=""></ion-back-button>
             </ion-buttons>
-            <ion-buttons (click)="onDeleteAccount()">
+            <ion-buttons (click)="onDeleteAccount()" class="logo">
               <ion-item lines="none">
                 <ion-avatar>
                   <img src="../../../assets/icon/Logo.png">
@@ -17,13 +17,15 @@
             </ion-buttons>
           </ion-row>
         </ion-col>
-        <ion-col size-xs="6" size-lg ="8" size-xl ="9">
+
+        <ion-col size-xs="6" size-sm ="7" size-md="8" size-xl ="9" class="ion-no-padding">
           <ion-searchbar  autocomplete="on" (click)="dontShow=false" placeholder="Buscar usuarios registrados" showCancelButton="never" cancelButtonText="Custom Cancel"></ion-searchbar>
         </ion-col>
-        <ion-col size-xs="5" size-lg ="3" size-xl ="2" class="ion-no-padding">
+
+        <ion-col size-xs="5" size-sm ="4" size-md="3" size-xl ="2" class="ion-no-padding">
           <ion-row style="display: flex;" class="ion-justify-content-around">
             <ion-buttons routerLink="/perfil/{{userID}}">
-              <ion-avatar style="display: flex; justify-content: center; align-items: center; ">
+              <ion-avatar class="center">
                 <img style="height: 40px; width: 40px; margin:0px" [src]="userImage" class="iconosPublicacion">
               </ion-avatar>
             </ion-buttons>
@@ -37,10 +39,10 @@
             </ion-buttons>
           </ion-row>
         </ion-col>
+
       </ion-row>
    </ion-toolbar>
   </ion-header>
-
   <ion-toolbar class="listaUsuarios scroll" *ngIf="searching">
     <ion-list >
       <ion-item *ngFor="let usuario of searchResult | async">
