--- a/src/app/UI/navbar/navbar.component.scss
+++ b/src/app/UI/navbar/navbar.component.scss
@@ -27,3 +27,8 @@ ion-buttons
 @media screen and (min-width: 0px) and (max-width: 600px) {
   .extraInfo { display: none; }  /* show it on small screens */
 }
+
+@media screen and (min-width: 0px) and (max-width: 1450px) {
+  .logo { display: none; }  /* show it on small screens */
+}
+
