--- a/src/app/listar-contactos/listar-contactos.page.html
+++ b/src/app/listar-contactos/listar-contactos.page.html
@@ -8,7 +8,7 @@
             <ion-card-title  class="ion-text-center">Contactos</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-searchbar  class="listaUsuarios" autocomplete="on" placeholder="Buscar contactos" slot="primary" showCancelButton="never" cancelButtonText="Custom Cancel"></ion-searchbar>
+            <ion-searchbar autocomplete="on" [formControl]="searchBar" placeholder="Buscar contactos" showCancelButton="never" cancelButtonText="Custom Cancel"></ion-searchbar>
             <ion-item-divider>
             </ion-item-divider>
                 <ion-content style="height: 500px;">
