--- a/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
+++ b/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
@@ -2,6 +2,22 @@
   <ion-grid>
     <ion-row>
       <ion-col size-md="6" offset-md="3">
+        <ion-row>
+          <ion-col size-md="3">
+            <ion-button color="primary" fill="outline" routerLink="./alta-administrador">
+              <ion-label>Registrar administrador</ion-label>
+            </ion-button>
+          </ion-col>
+          <ion-col size-md="3" offset-md="6">
+            <ion-button color="danger" fill="outline" (click)="onBorrarCuentaPropia()">
+              <ion-label>Eliminar cuenta propia</ion-label>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3">
         <ion-list>
           <ion-item-sliding *ngFor="let usuario of usuarios" #slidingUser>
             <ion-item>
@@ -23,7 +39,6 @@
                 <ion-icon name="lock-open-sharp" slot="icon-only"></ion-icon>
               </ion-item-option>
             </ion-item-options>
-
           </ion-item-sliding>
         </ion-list>
       </ion-col>
