--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -37,11 +37,7 @@
     <span class="section-title">Galeria</span>
     <ion-slides>
       <ion-slide>
-        <img class="galeria"  src="https://i0.wp.com/hotbook.com.mx/wp-content/uploads/2019/01/fotosparis_portada.jpg?w=1024&ssl=1">
-        <img class="galeria" src="https://i0.wp.com/hotbook.com.mx/wp-content/uploads/2019/01/fotosparis_portada.jpg?w=1024&ssl=1">
-        <img class="galeria" src="https://i0.wp.com/hotbook.com.mx/wp-content/uploads/2019/01/fotosparis_portada.jpg?w=1024&ssl=1">
-        <img class="galeria" src="https://i0.wp.com/hotbook.com.mx/wp-content/uploads/2019/01/fotosparis_portada.jpg?w=1024&ssl=1">
-        <img class="galeria" src="https://i0.wp.com/hotbook.com.mx/wp-content/uploads/2019/01/fotosparis_portada.jpg?w=1024&ssl=1">
+        <img *ngFor = "let img of galleria | async" class="galeria"  [src]="img.contenido">
       </ion-slide>
     </ion-slides>
   </div>
@@ -50,7 +46,7 @@
 
   <ion-grid fixed>
     <ion-row>
-      <ion-col offset-md="4" sizeMd="4" sizeSm="12"><app-feed 
+      <ion-col offset-md="4" sizeMd="4" sizeSm="12"><app-feed
         [publicaciones] = "publicaciones"
         [usuario] = "usuario"
         ></app-feed>
