--- a/src/app/UI/medalla/medalla.component.html
+++ b/src/app/UI/medalla/medalla.component.html
@@ -1,5 +1,5 @@
 <div style="margin-right: 8rem;">
-    <h6>Iron Wolf</h6>
+    <h6>{{medallaName}}</h6>
     <ion-img style="height: 75px;width: 75px; display: block; margin-left: auto; margin-right: auto;"
         [src]="medallaUrl"></ion-img>
     <h5>Puntos: {{puntosActuales}}/{{puntosTotales}}</h5>
