--- a/src/app/UI/feed/feed.component.html
+++ b/src/app/UI/feed/feed.component.html
@@ -7,10 +7,13 @@
     </ion-col>
     <ion-col size="10">
       <ion-row class="tweet-info">
-        <ion-col size="12">
+        <ion-col size="10">
           <span class="name">{{this.usuario.value.nombre +" "+ this.usuario.value.apellido}}</span>
           <br>
           <span class="handle">@{{this.usuario.value.nickname}}</span>
+        </ion-col>
+        <ion-col size="2">
+          <ion-icon (click)="presentPopover( $event, publicacion )" name="ellipsis-horizontal-circle-outline"></ion-icon>
         </ion-col>
       </ion-row>
       <ion-row>
