--- a/src/app/recuperar-password/recuperar-password.page.html
+++ b/src/app/recuperar-password/recuperar-password.page.html
@@ -5,6 +5,11 @@
         <ion-col size-xs="12" size-md="10" offset-md="1">
           <ion-card>
             <ion-card-content>
+              <ion-toolbar>
+                <ion-buttons >
+                  <ion-back-button  class="pointer" text=""></ion-back-button>
+                </ion-buttons>
+              </ion-toolbar>
               <ion-card-title>Travel Pack</ion-card-title>
               <ion-list class="form-input">
                 <ion-row>
