--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -5,30 +5,41 @@
         <ion-col size-xs="12" size-md="10" offset-md="1">
           <ion-card>
             <ion-card-content>
-              <ion-card-title>Travel Pack</ion-card-title>
-
-              <!--<ion-icon (click)="cancelar()" name="close"></ion-icon>-->
               <ion-row>
+                <ion-col size-xs="12" class="ion-align-items-center">
 
-                <ion-col size-xs="12" size-md="4">
-                 <ion-card-header *ngIf="imageSource === undefined">
-                  <img id="foto" src="../../assets/img/defaultProfileImage.png">
-                </ion-card-header>
-                <ion-card-header *ngIf="!(imageSource === undefined)">
-                  <img  id="foto" [src]="imageSource">
-                </ion-card-header>
+                    <ion-buttons class="ion-justify-self-start">
+                      <ion-back-button  class="pointer" text=""></ion-back-button>
+                    </ion-buttons>
 
-
-                <ion-avatar id="imageAdd">
-                  <input type="file" #fileInput (change)="uploadFile($event)" hidden="true" accept="image/*"/>
-                  <!-- Imagen -->
-                  <ion-button fill="outline" (click)="selectImageSource()">Añadir foto
-                    <ion-icon name="camera-outline" slot="start" ></ion-icon>
-                  </ion-button>
-                </ion-avatar>
-
+                  <ion-card-title style="justify-self:center;">Travel Pack</ion-card-title>
                 </ion-col>
+              </ion-row>
 
+              <ion-row style="height: 25vh;">
+                <ion-col size-xs="12" size-md="4">
+                  <ion-row>
+                    <ion-col size="12" style="display: flex; justify-content: center; align-items:flex-start;">
+                      <ion-card-header *ngIf="imageSource === undefined">
+                        <img style="width: 115px; height: 115px; background-size:contain;" id="foto" src="../../assets/img/defaultProfileImage.png">
+                      </ion-card-header>
+                      <ion-card-header *ngIf="!(imageSource === undefined)">
+                        <img style="width: 120px; height: 120px; background-size:contain;" id="foto" [src]="imageSource">
+                      </ion-card-header>
+                    </ion-col>
+                  </ion-row>
+
+                  <ion-row >
+                    <ion-col size="12">
+                      <div style="display: flex; justify-content: center;">
+                        <input type="file" style="width: 100%;" #fileInput (change)="uploadFile($event)" hidden="true" accept="image/*"/>
+                        <ion-button fill="outline" (click)="selectImageSource()">Añadir foto
+                          <ion-icon name="camera-outline" slot="start" ></ion-icon>
+                        </ion-button>
+                      </div>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
               </ion-row>
 
               <ion-list class="form-input">
