--- a/src/app/alta-evento/alta-evento.page.scss
+++ b/src/app/alta-evento/alta-evento.page.scss
@@ -62,3 +62,9 @@ ion-textarea, ion-textarea textarea{
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+
+ion-item::part(native) {
+  //WRITE ALL YOUR CSS RULES HERE
+  padding-left: 0;
+  /** and lots more **/
+}
