--- a/src/app/admin-page/admin-page.page.html
+++ b/src/app/admin-page/admin-page.page.html
@@ -21,6 +21,11 @@
         <ion-icon name="people-outline"></ion-icon>
         <ion-label>Gestion de Usuarios</ion-label>
       </ion-tab-button>
+
+      <ion-tab-button tab="tabPerfilAdminPage">
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-label>Mi cuenta</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
 </ion-content>
