--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true" *ngIf="!visualizando">
+<ion-header [translucent]="true" *ngIf="creando || editando">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button icon="chevron-back-outline" class="pointer" text=""></ion-back-button>
@@ -8,10 +8,10 @@
   </ion-toolbar>
 </ion-header>
 
-<app-navbar *ngIf="visualizando"></app-navbar>
+<app-navbar *ngIf="!creando && !editando"></app-navbar>
 
 
-<ion-content *ngIf="!visualizando">
+<ion-content *ngIf="creando || editando">
   <ion-grid class="main-grid">
     <ion-row>
       <ion-col size="4" size-md="2" size-xs="12">
@@ -45,7 +45,7 @@
         <ion-label>Ubicación</ion-label>
       </ion-col>
       <ion-col id="mapa" size="8" size-md="5" size-lg="3" size-xs="12">
-        <app-mapa [componente]="'altaEvento'" [currentLocation]="true" [ubiCentral]="ubicacion" [marcarUbicacion]="true" (ubicacion)="marcarUbicacion($event)"></app-mapa>
+        <app-mapa [currentLocation]="true" [ubiCentral]="ubicacion" [marcarUbicacion]="true" [draggable]="true" [buscador]="true" (ubicacion)="marcarUbicacion($event)"></app-mapa>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -81,7 +81,7 @@
   </ion-grid>
 </ion-content>
 
-<ion-content *ngIf="visualizando">
+<ion-content *ngIf="!creando && !editando">
   <ion-grid class="unpaddingX unpaddingX-cols">
     <ion-row>
       <ion-col size="12">
@@ -97,6 +97,21 @@
     <ion-row>
       <ion-col>
         <p>{{ evento.descripcion }}</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col *ngIf="!evento.participantes || evento.participantes.length == 0">
+        <span>No hay participantes en el evento</span>
+      </ion-col>
+      <ion-col *ngIf="evento.participantes && evento.participantes.length > 0">
+        <span class="lstParticipantes pointer" *ngFor="let participante of evento.participantes" >
+          <img [src]="participante.imagenPerfil" /> {{ participante.nombre }} {{ participante.apellido }}
+        </span>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col id="mapa">
+        <app-mapa [currentLocation]="true" [ubiCentral]="ubicacion" [marcarUbicacion]="true" [draggable]="false" [buscador]="false" (ubicacion)="marcarUbicacion($event)"></app-mapa>
       </ion-col>
     </ion-row>
   </ion-grid>
