--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -91,13 +91,18 @@
     <ion-item>
         <ion-title>{{ evento.nombre }}</ion-title>
     </ion-item>
-    <ion-item>
-          <p>Del {{ evento.fechaInicio | date: 'dd-MM-yyyy'}} al {{ evento.fechaFin | date: 'dd-MM-yyyy' }}.</p>
+    <ion-item class="fechas-item">
+          <p class="fechas">Del {{ evento.fechaInicio | date: 'dd-MM-yyyy'}} al {{ evento.fechaFin | date: 'dd-MM-yyyy' }}.</p>
     </ion-item>
     <ion-row>
       <ion-col>
         <p>{{ evento.descripcion }}</p>
       </ion-col>
+    </ion-row>
+    <ion-row class="custom-tabs">
+      <ion-col size="4" (click)="toogleTabs('publicaciones')"><ion-icon name="happy-outline" size="large" color="blue"></ion-icon><br><ion-label>Publicaciones</ion-label></ion-col>
+      <ion-col size="4" (click)="toogleTabs('publicaciones')"><ion-icon name="people-outline" size="large"></ion-icon><br><ion-label>Participantes</ion-label></ion-col>
+      <ion-col size="4" (click)="toogleTabs('publicaciones')"><ion-icon name="map-outline" size="large"></ion-icon><br><ion-label>Mapa</ion-label></ion-col>
     </ion-row>
     <ion-row>
       <ion-col *ngIf="!evento.participantes || evento.participantes.length == 0">
