--- a/src/app/eventos/eventos.page.html
+++ b/src/app/eventos/eventos.page.html
@@ -10,7 +10,8 @@
       <img [src]="evento.imagen" class="thumbnail" *ngIf="evento.imagen" (click)="ver(evento)">
       <p (click)="ver(evento)" class="fullwidth">{{ evento.nombre }}</p>
       <ion-icon slot="end" name="create-outline" class="pointer" (click)="editar(evento)"></ion-icon>
-      <ion-icon slot="end" name="trash-outline" (click)="eliminarAlert(evento)" class="pointer"></ion-icon>
+      <ion-icon slot="end" *ngIf="evento.owner" name="trash-outline" (click)="eliminarAlert(evento, true)" class="pointer"></ion-icon>
+      <ion-icon slot="end" *ngIf="!evento.owner" name="exit-outline" (click)="eliminarAlert(evento, false)" class="pointer"></ion-icon>
     </ion-item>
   </ion-list>
 </ion-content>
