--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -34,4 +34,11 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col offset-md="3" sizeMd="5" sizeSm="12">
+        <app-feed-home></app-feed-home>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
