--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,12 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
+          <ion-item lines="none" button (click)="goToGallery()">
+            <ion-icon name="images-outline" slot="start"></ion-icon>
+            <ion-label>Mi galeria</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
           <ion-item lines="none" (click)="onLogout()" button>
             <ion-icon name="exit" slot="start"></ion-icon>
             <ion-label>Cerrar sesión</ion-label>
