--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 
 <ion-content>
-  <form #f="ngForm" (ngSubmit)="onSubmit(f)" style="height: 100vh;">
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)" style="height: 100vh;" (keyup.enter)="onSubmit(f)">
     <ion-grid class="ion-no-padding">
       <ion-row>
         <div style="height: 100vh; background-size: cover; position: absolute; opacity: 0.7;">
