--- a/src/app/tab-perfil-admin/tab-perfil-admin.page.html
+++ b/src/app/tab-perfil-admin/tab-perfil-admin.page.html
@@ -1,25 +1,26 @@
 <ion-content>
-  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)" (keyup.enter)="onSubmit(f)">
     <ion-grid fixed>
       <ion-row>
         <ion-col size-xs="12" size-md="10" offset-md="1">
           <ion-card>
             <div style="display: flex; justify-content: flex-end; flex-direction: row;">
-              <ion-button style="max-width: 180px; flex-grow: 1; margin: 15px 15px 0 0;"  color="danger" fill="outline" (click)="onBorrarCuentaPropia()">
-                <ion-label>Eliminar cuenta</ion-label>
+              <ion-button style="max-width: 200px; flex-grow: 1; margin: 15px 15px 0 0;"  color="danger" fill="outline" (click)="onBorrarCuentaPropia()">
+                <ion-icon name="trash-outline" slot="start"></ion-icon>
+                Eliminar cuenta
               </ion-button>
             </div>
               <ion-card-content>
                 <div style="display: flex; justify-content: center;">
-                  <ion-card-title>Mi información</ion-card-title>
+                  <ion-card-title style="font-size: 25px;">Mi información</ion-card-title>
                 </div>
                 <ion-list class="form-input">
-                  <ion-item class="ion-no-padding">
+                  <ion-item>
                     <!-- <ion-input type="email" placeholder="Email" #txtEmail></ion-input> -->
                     <ion-label position="floating">Email</ion-label>
                     <ion-input type="email" [(ngModel)]="emailDefault" name="email" required email #emailCtrl="ngModel"></ion-input>
                   </ion-item>
-                  <ion-item class="ion-no-padding"
+                  <ion-item
                   *ngIf="!emailCtrl.valid && emailCtrl.touched"
                   lines="none"
                 >
@@ -27,21 +28,24 @@
                     Debe de ser un correo valido.
                   </ion-label>
                 </ion-item>
-                  <ion-item class="ion-no-padding">
+                  <ion-item >
                     <!-- <ion-input type="text" placeholder="Nombre" #txtNombre></ion-input> -->
                     <ion-label position="floating">Nombre</ion-label>
                     <ion-input type="text" [(ngModel)]="nombreDefault" name="nombre" #txtNombre></ion-input>
                   </ion-item>
-                  <ion-item class="ion-no-padding">
+                  <ion-item>
                   <!-- <ion-input type="text" placeholder="Apellido" #txtApellido></ion-input> -->
                   <ion-label position="floating">Apellido</ion-label>
                   <ion-input type="text" [(ngModel)]="apellidoDefault" name="apellido" #txtApellido></ion-input>
                   </ion-item>
                   <ion-row>
-                    <ion-col>
-                      <ion-button type="submit" style="display: block; margin-top: 10px;" fill="outline" [disabled]="!f.valid">
-                        Guardar
-                      </ion-button>
+                    <ion-col size="4" offset="4">
+                      <div style="display: flex; justify-content: center;">
+                        <ion-button type="submit" style="margin-top: 10px; max-width: 200px;" fill="outline" [disabled]="!f.valid">
+                          <ion-icon name="save-outline" slot="start"></ion-icon>
+                          Guardar
+                        </ion-button>
+                      </div>
                     </ion-col>
                   </ion-row>
                 </ion-list>
