--- a/src/app/galeria-modal/galeria-modal.page.html
+++ b/src/app/galeria-modal/galeria-modal.page.html
@@ -10,20 +10,20 @@
 
 <ion-footer>
   <ion-row>
-    <ion-col size="4" class="ion-text-center">
-      <ion-button (click)="zoom(false)" fill="clear" color="light">
+    <ion-col size="4" class="ion-text-center ion-no-padding">
+      <ion-button (click)="zoom(false)" fill="clear" color="light" style="font-size: 12px;">
         <ion-icon name="remove" slot="start"></ion-icon>
         Alejarse
       </ion-button>
     </ion-col>
-    <ion-col size="4" class="ion-text-center">
-      <ion-button (click)="close()" fill="clear" color="light">
+    <ion-col size="4" class="ion-text-center ion-no-padding">
+      <ion-button (click)="close()" fill="clear" color="light" style="font-size: 12px;">
         <ion-icon name="close" slot="start"></ion-icon>
         Cerrar
       </ion-button>
     </ion-col>
-    <ion-col size="4" class="ion-text-center">
-      <ion-button (click)="zoom(true)" fill="clear" color="light">
+    <ion-col size="4" class="ion-text-center ion-no-padding">
+      <ion-button (click)="zoom(true)" fill="clear" color="light" style="font-size: 12px;">
         <ion-icon name="add" slot="start"></ion-icon>
         Acercarse
       </ion-button>
