--- a/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
+++ b/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
@@ -21,7 +21,7 @@
                   <img [src]="amigo.imagenPerfil">
                 </ion-avatar>
                 <ion-label> {{ amigo.nombre }} {{ amigo.apellido }}</ion-label>
-                <ion-button (click)="onViewProfile()">
+                <ion-button routerLink="/perfil/{{amigo.idPersona}}">
                   <ion-icon name="person-circle-outline" slot="icon-only"></ion-icon>
                 </ion-button>
               </ion-item>
