--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -24,8 +24,9 @@
       <ion-col sizeMd="4">
         <app-medalla [medalla] = "medalla"></app-medalla>
       </ion-col>
+      <ion-button *ngIf="!esMiPerfil" (click)="agregarContacto()">{{textoBoton}}</ion-button>
       <ion-col sizeMd="2">
-        <ion-button routerLink="/modificar-perfil" color="dark" size="small" fill="clear">
+        <ion-button routerLink="/modificar-perfil" color="dark" size="small" fill="clear" *ngIf="esMiPerfil">
           Editar Perfil
           <ion-icon slot="icon-only" name="settings-outline"></ion-icon>
         </ion-button>
