--- a/src/app/UI/medalla/medalla.component.html
+++ b/src/app/UI/medalla/medalla.component.html
@@ -1,6 +1,6 @@
-<div style="margin-right: 8rem;">
-    <h6>{{medallaName}}</h6>
-    <ion-img style="height: 75px;width: 75px; display: block; margin-left: auto; margin-right: auto;"
+<div class="medalla-component" >
+    <h6 class="medalla-name">{{medallaName}}</h6>
+    <ion-img class="imagen"
         [src]="medallaUrl"></ion-img>
     <h5>Puntos: {{puntosActuales}}/{{puntosTotales}}</h5>
     <ion-progress-bar [value]="progreso"></ion-progress-bar>
