--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,7 +8,7 @@
         </div>
           <ion-col size-lg="5" size-md="7" size-sm="8" size-xs="10">
             <div class="test">
-              <ion-card style="max-width: 550px; flex-grow: 1; margin-top: 200px;">
+              <ion-card style="max-width: 550px; flex-grow: 1; margin-top: 200px; background-color:white">
                 <ion-card-content>
                   <ion-card-title>Travel Pack</ion-card-title>
                   <ion-list class="form-input">
