--- a/src/app/recuperar-password/recuperar-password.page.html
+++ b/src/app/recuperar-password/recuperar-password.page.html
@@ -3,7 +3,7 @@
     <ion-grid fixed>
       <ion-row>
         <ion-col size-xs="12" size-md="10" offset-md="1">
-          <ion-card>
+          <ion-card style="background-color:white">
             <ion-card-content>
               <ion-toolbar>
                 <ion-buttons >
