--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,9 +1,9 @@
 <ion-content>
-  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+  <form  #f="ngForm" (ngSubmit)="onSubmit(f)">
     <ion-grid fixed>
       <ion-row>
         <ion-col size-xs="12" size-md="10" offset-md="1">
-          <ion-card>
+          <ion-card style="background-color:white">
             <ion-card-content>
               <ion-row>
                 <ion-col size-xs="12" class="ion-align-items-center">
