--- a/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
+++ b/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
@@ -1,10 +1,10 @@
 <app-navbar></app-navbar>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
+  <ion-grid >
+    <ion-row >
       <ion-col size-md="8" offset-md="2">
-        <ion-card>
+        <ion-card style="background-color:white">
           <ion-card-header color=tertiary>
             <ion-card-title  class="ion-text-center">Personas que quizas le interecen</ion-card-title>
           </ion-card-header>
