--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
 .scroll-content {
   padding-bottom: 0 !important;
 }
+
+#mainMenu {
+  background: url('../assets/img/background.jpg');
+  background-origin: content-box;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  padding-bottom: 1px;
+}
