--- a/src/app/estadisticas/estadisticas.page.html
+++ b/src/app/estadisticas/estadisticas.page.html
@@ -27,7 +27,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
+  <ion-card class="welcome-card">
     <ion-card-header>
       Usuarios Por Paises
     </ion-card-header>
