--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,7 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col size="3"></ion-col>
-      <ion-col size="6">
+      <ion-col style="background-color: white" size="6">
         <app-alta-publicacion></app-alta-publicacion>
       </ion-col>
       <ion-col size="3">
