--- a/src/app/intereses-usuario-comun/intereses-usuario-comun.page.html
+++ b/src/app/intereses-usuario-comun/intereses-usuario-comun.page.html
@@ -3,7 +3,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size-md="8" size-xs="12"  offset-md="2">
-        <ion-card>
+        <ion-card style="background-color:white">
           <ion-card-header color=tertiary>
             <ion-card-title  class="ion-text-center">Intereses</ion-card-title>
           </ion-card-header>
