--- a/src/app/UI/feed/feed.component.html
+++ b/src/app/UI/feed/feed.component.html
@@ -40,7 +40,7 @@
         <ion-row class="ion-justify-content-start reaccion-container">
           <ion-col class="reaccion-col">
             <ion-button class="reacciones" fill="clear" size="small" (click)="like(publicacion)">
-              <ion-icon name="reaccion-icon thumbs-up-outline" *ngIf="publicacion.cantidadLikes+1" slot="start"></ion-icon>
+              <ion-icon class="reaccion-icon" name="thumbs-up-outline" *ngIf="publicacion.cantidadLikes+1" slot="start"></ion-icon>
               <!-- <ion-icon name="thumbs-up" *ngIf="!like" slot="start"></ion-icon> -->
               <!-- <ion-icon name="heart-outline" slot="start"></ion-icon> -->
               {{publicacion.cantidadLikes}}
@@ -48,7 +48,7 @@
           </ion-col>
           <ion-col class="reaccion-col">
             <ion-button class="reacciones" fill="clear" (click)="dislike(publicacion)" size="small">
-              <ion-icon name="reaccion-icon thumbs-down-outline" *ngIf="publicacion.cantidadDislikes+1" slot="start"></ion-icon>
+              <ion-icon class="reaccion-icon" name="thumbs-down-outline" *ngIf="publicacion.cantidadDislikes+1" slot="start"></ion-icon>
               <!-- <ion-icon name="thumbs-down" *ngIf="!dislike" slot="start"></ion-icon> -->
               {{publicacion.cantidadDislikes}} 
             </ion-button>
