--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -99,20 +99,20 @@
         <p>{{ evento.descripcion }}</p>
       </ion-col>
     </ion-row>
-    <ion-row class="custom-tabs">
-      <ion-col size="4" (click)="toggleTab('publicaciones')"><ion-icon name="happy-outline" size="large" color="blue"></ion-icon><br><ion-label>Publicaciones</ion-label></ion-col>
-      <ion-col size="4" (click)="toggleTab('participantes')"><ion-icon name="people-outline" size="large"></ion-icon><br><ion-label>Participantes</ion-label></ion-col>
-      <ion-col size="4" (click)="toggleTab('mapa')"><ion-icon name="map-outline" size="large"></ion-icon><br><ion-label>Mapa</ion-label></ion-col>
-    </ion-row>
+    <ion-item class="custom-tabs">
+      <ion-col size="4" (click)="toggleTab('publicaciones')"><ion-icon name="happy-outline" size="medium" color="blue"></ion-icon><br><ion-label>Publicaciones</ion-label></ion-col>
+      <ion-col size="4" (click)="toggleTab('participantes')"><ion-icon name="people-outline" size="medium"></ion-icon><br><ion-label>Participantes</ion-label></ion-col>
+      <ion-col size="4" (click)="toggleTab('mapa')"><ion-icon name="map-outline" size="medium"></ion-icon><br><ion-label>Mapa</ion-label></ion-col>
+    </ion-item>
     <ion-row *ngIf="activeTab=='participantes'">
       <ion-col *ngIf="!participantes.value || participantes.value.length == 0">
         <span>No hay participantes en el evento</span>
       </ion-col>
       <ion-col *ngIf="participantes.value && participantes.value.length > 0">
-        <span class="lstParticipantes pointer" *ngFor="let invitado of participantes.value" >
-          <img [src]="invitado.imagenPerfil" class="thumbnail" /> {{ invitado.nombre }} {{ invitado.apellido }}
+        <ion-item class="lstParticipantes pointer" *ngFor="let invitado of participantes.value" >
+          <img [src]="invitado.imagenPerfil" class="thumbnail ml-2" /> {{ invitado.nombre }} {{ invitado.apellido }}
           <ion-icon name="person-remove-outline" button (click)="removerIntegrante(participante)"></ion-icon>
-        </span>
+        </ion-item>
       </ion-col>
     </ion-row>
     <ion-row *ngIf="activeTab=='mapa'">
@@ -126,9 +126,9 @@
         <span>No hay publicaciones en el evento</span>
       </ion-col>
       <ion-col *ngIf="evento.publicaciones && evento.publicaciones.length > 0">
-        <span class="lstParticipantes pointer" *ngFor="let publicaciones of evento.publicaciones" >
+        <ion-item class="lstParticipantes pointer" *ngFor="let publicaciones of evento.publicaciones" >
           <img [src]="publicaciones.imagen" class="thumbnail" /> {{ publicaciones.title }} {{ publicaciones.descripcion }}
-        </span>
+        </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
