solicitud de contactos

--- a/src/app/admin-page/admin-page.page.html
+++ b/src/app/admin-page/admin-page.page.html
@@ -12,10 +12,10 @@
         <ion-label>Intereses</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="tabMedallas">
+      <!-- <ion-tab-button tab="tabMedallas">
         <ion-icon name="medal-outline"></ion-icon>
         <ion-label>Medallas</ion-label>
-      </ion-tab-button>
+      </ion-tab-button> -->
 
       <ion-tab-button tab="tabGestionUsuarios">
         <ion-icon name="people-outline"></ion-icon>
