--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,12 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
+          <ion-item lines="none" routerLink="./solicitudes-pendientes">
+            <ion-icon name="mail-unread-outline" slot="start"></ion-icon>
+            <ion-label>Ver Solicitudes</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
           <ion-item lines="none" (click)="onLogout()" button>
             <ion-icon name="exit" slot="start"></ion-icon>
             <ion-label>Cerrar sesión</ion-label>
