--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <ion-buttons >
               <ion-back-button  class="pointer" text=""></ion-back-button>
             </ion-buttons>
-            <ion-buttons (click)="onDeleteAccount()" class="logo">
+            <ion-buttons  routerLink = "/home" class="logo">
               <ion-item lines="none">
                 <ion-avatar>
                   <img src="../../../assets/icon/Logo.png">
