--- a/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.scss
+++ b/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.scss
@@ -1,15 +1,3 @@
-.labelChecks {
-  padding: 0px 110px 0px 520px;
-}
-
-
-@media (min-width: 500px) and (min-height: 400px) {
-  .labelChecks {
-    padding: 0px 0px 0px 0px;
-  }
-}
-
-.my-checkbox {
-  display: flex;
-  align-items: center;
+.card-profile{
+  background-color: white;
 }
