--- a/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
+++ b/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
@@ -1,53 +1,53 @@
 <app-navbar></app-navbar>
 <ion-content>
   <ion-grid>
-    <ion-row>
-      <ion-col size-sm="6" size-xs="12" >
-        <ion-card>
-          <ion-card-header color=tertiary>
-            <ion-card-title  class="ion-text-center">Configuracion de Notificaciones EMAIL</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-item-divider>
-              <ion-label>
-                Lista de configuraciones:
-              </ion-label>
-            </ion-item-divider>
-            <ion-list *ngFor="let config of configuracionAMostrar | keyvalue">
-              <ion-item *ngIf="config.key !== 'idPersona' && config.key !== 'idConfiguracion' ">
-                <ion-label> {{ config.key }} </ion-label>
-                <ion-checkbox place-right checked={{config.value}} (click)="checkedChanged(config.key, config.value)"></ion-checkbox>
-              </ion-item>
-            </ion-list>
-            <ion-item>
-              <ion-button slot="end" (click)="onAplicar()">APLICAR</ion-button>
-            </ion-item>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-      <ion-col size-sm="6" size-xs="12" >
-        <ion-card>
-          <ion-card-header color=tertiary>
-            <ion-card-title  class="ion-text-center">Configuracion de Notificaciones PUSH</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-item-divider>
-              <ion-label>
-                Lista de configuraciones:
-              </ion-label>
-            </ion-item-divider>
-            <ion-list *ngFor="let config of configuracionAMostrar | keyvalue">
-              <ion-item *ngIf="config.key !== 'idPersona' && config.key !== 'idConfiguracion'">
-                <ion-label> {{ config.key }} </ion-label>
-                <ion-checkbox place-right checked={{config.value}} (click)="checkedChanged(config.key, config.value)"></ion-checkbox>
-              </ion-item>
-            </ion-list>
-            <ion-item>
-              <ion-button slot="end" (click)="onAplicar()">APLICAR</ion-button>
-            </ion-item>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
+    <ion-card class="card-profile">
+      <ion-row>
+        <ion-col size-sm="6" size-xs="12" >
+          <ion-card class="card-profile">
+            <ion-card-header color=tertiary>
+              <ion-card-title  class="ion-text-center">Configuracion de Notificaciones EMAIL</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-item-divider>
+                <ion-label>
+                  Lista de configuraciones:
+                </ion-label>
+              </ion-item-divider>
+              <ion-list *ngFor="let config of configuracionAMostrar | keyvalue">
+                <ion-item *ngIf="config.key !== 'idPersona' && config.key !== 'idConfiguracion' ">
+                  <ion-label> {{ config.key }} </ion-label>
+                  <ion-checkbox place-right checked={{config.value}} (click)="checkedChanged(config.key, config.value)"></ion-checkbox>
+                </ion-item>
+              </ion-list>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col size-sm="6" size-xs="12" >
+          <ion-card class="card-profile">
+            <ion-card-header color=tertiary>
+              <ion-card-title  class="ion-text-center">Configuracion de Notificaciones PUSH</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-item-divider>
+                <ion-label>
+                  Lista de configuraciones:
+                </ion-label>
+              </ion-item-divider>
+              <ion-list *ngFor="let config of configuracionAMostrarPush | keyvalue">
+                <ion-item *ngIf="config.key !== 'idPersona' && config.key !== 'idConfiguracion'">
+                  <ion-label> {{ config.key }} </ion-label>
+                  <ion-checkbox place-right checked={{config.value}} (click)="checkedChangedPUSH(config.key, config.value)"></ion-checkbox>
+                </ion-item>
+              </ion-list>
+
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+      <ion-item>
+        <ion-button slot="end" (click)="onAplicar()">APLICAR</ion-button>
+      </ion-item>
+    </ion-card>
   </ion-grid>
 </ion-content>
